--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <h1>GOIT JavaScript Homework 02</h1>
 
-    <script src="./js/task-1.js" type="module"></script>
+    <!-- <script src="./js/task-1.js" type="module"></script> -->
+    <!-- <script src="./js/task-2.js" type="module"></script> -->
+    <script src="./js/task-3.js" type="module"></script>
 </body>
 
 </html>
