--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <!-- <script src="./js/task-2.js" type="module"></script> -->
     <!-- <script src="./js/task-3.js" type="module"></script> -->
     <!-- <script src="./js/task-4.js" type="module"></script> -->
-    <script src="./js/task-5.js" type="module"></script>
+    <!-- <script src="./js/task-5.js" type="module"></script> -->
+    <!-- <script src="./js/task-6.js" type="module"></script> -->
+    <script src="./js/task-7.js" type="module"></script>
 </body>
 
 </html>
