--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>GOIT JavaScript Homework 02</h1>
+    <h1>GoIt JavaScript Homework 02</h1>
+    <p>Кожне завдання виконано в окремому файлі з ім'ям task-номер_завдання.js.</p>
 
     <!-- <script src="./js/task-1.js" type="module"></script> -->
     <!-- <script src="./js/task-2.js" type="module"></script> -->
